# ctf-hook

./: README.md  default.nix  flake.nix  nixpkgs.nix
ctf-hook-client/: client-example.conf  ctf-hook  default.nix  requirements.txt  setup.py
ctf-hook-server/: LICENSE  README.md  ctf-hook.cabal  default.nix  example.config.json  generate-nix.sh  generated.nix  shell.nix
ctf-hook-server/app/: Main.hs
ctf-hook-server/src/CTF/Hook/: App.hs  Config.hs  Convert.hs  DB.hs  Request.hs  Types.hs  Utils.hs
ctf-hook-server/test/: Spec.hs
