name:                ctf-hook
version:             0.2.1.0
-- synopsis:
-- description:
homepage:            https://github.com/Prillan/ctf-hook
license:             BSD3
license-file:        LICENSE
author:              Rasmus Précenth
maintainer:          rasmus@precenth.eu
copyright:           2018 Rasmus Précenth
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wno-unused-do-bind -Werror=incomplete-patterns -O2
  exposed-modules:     CTF.Hook.App
                       CTF.Hook.DB
                       CTF.Hook.Config
                       CTF.Hook.Convert
                       CTF.Hook.Request
                       CTF.Hook.Types
                       CTF.Hook.Utils
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base64-bytestring
                     , bcrypt
                     , bytestring
                     , cereal
                     , hedis
                     , http-types
                     , magic
                     , network
                     , MonadRandom
                     , scotty
                     , text
                     , transformers
                     , wai
                     , wai-extra
  default-language:    Haskell2010

executable ctf-hook-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Wno-unused-do-bind -Werror=incomplete-patterns -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ctf-hook
                     , bytestring
                     , hedis
                     , transformers
  default-language:    Haskell2010

test-suite ctf-hook-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ctf-hook
                     , aeson
                     , bytestring
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
  ghc-options:         -Wall -Wno-unused-do-bind  -Werror=incomplete-patterns -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:Prillan/ctf-hook.git
